<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>micromouse_interfaces</name>
  <version>0.0.0</version>
  <description>ROS2 package that defines custom action and service interfaces for MicroMouse maze navigation</description>
  
  <maintainer email="asharm41@umd.edu">Akshun Sharma</maintainer>
  <maintainer email="agupta96@umd.edu">Anish Gupta</maintainer>
  <maintainer email="pkoli@umd.edu">Pranav Koli</maintainer>
  <maintainer email="sidmat03@umd.edu">Sidharth Mathur</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
